update log table

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/09 09:22:39 WARN Utils: Your hostname, Zipcoders-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.3.252 instead (on interface en0)\n",
+      "24/09/09 09:22:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/09/09 09:22:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -20,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13123d520>"
+       "<IPython.lib.display.IFrame at 0x12a7f4c20>"
       ]
      },
      "metadata": {},
@@ -85,11 +96,10 @@
     "        .option(\"password\", \"zipcode1\") \\\n",
     "        .load()\n",
     "\n",
-    "     # Convert to Pandas DataFrame and select necessary columns\n",
+    "    # Convert to Pandas DataFrame and select necessary columns\n",
     "    pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\") \\\n",
     "        .orderBy(F.desc(\"event_date\")) \\\n",
-    "        .limit(10) \\\n",
-    "        .toPandas()\n",
+    "        .limit(11).toPandas()\n",
     "    \n",
     "    # Sort by date in descending order\n",
     "    pdf = pdf.sort_values('event_date', ascending=False).reset_index(drop=True)\n",
@@ -103,6 +113,9 @@
     "    # Detect anomalies (changes >= 15%)\n",
     "    pdf['is_anomaly'] = np.abs(pdf['percent_change']) >= 15\n",
     "    \n",
+    "    # Remove the extra row we used for calculation\n",
+    "    pdf = pdf.iloc[:-1]\n",
+    "\n",
     "    # Create the event log HTML using Dash components with specified font sizes\n",
     "    event_log_html = html.Div([\n",
     "        html.H4(\"Event Log\", style={'fontSize': '20px', 'marginBottom': '10px'}),\n",
@@ -121,7 +134,7 @@
     "                    html.Td(row['celebrity'], style={'fontSize': '12px', 'padding': '5px'}),\n",
     "                    html.Td(row['event_description'], style={'fontSize': '12px', 'padding': '5px'}),\n",
     "                    html.Td(f\"{row['fan_count_change']:+d}\", style={'fontSize': '12px', 'padding': '5px', 'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'}),\n",
-    "                    html.Td(f\"{row['percent_change']:.2f}%\", style={'fontSize': '12px', 'padding': '5px'}),\n",
+    "                    html.Td(f\"{row['percent_change']:.2f}%\" if not pd.isna(row['percent_change']) else \"N/A\", style={'fontSize': '12px', 'padding': '5px'}),\n",
     "                    html.Td(\"ALERT\" if row['is_anomaly'] else \"\", style={'fontSize': '12px', 'padding': '5px', 'color': 'red', 'fontWeight': 'bold'})\n",
     "                ]) for _, row in pdf.iterrows()\n",
     "            ])\n",
@@ -366,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
