Increased font for demo

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -22,7 +22,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x127af8290>"
+       "<IPython.lib.display.IFrame at 0x132efea20>"
       ]
      },
      "metadata": {},
@@ -31,6 +31,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import time\n",
     "import dash\n",
     "from pyspark.sql.functions import desc\n",
@@ -55,7 +56,7 @@
     "            .option(\"url\", \"jdbc:mysql://127.0.0.1:3306/starmeter_sim\") \\\n",
     "            .option(\"dbtable\", \"user_dynamic_preferences\") \\\n",
     "            .option(\"user\", \"root\") \\\n",
-    "            .option(\"password\", \"mypass\") \\\n",
+    "            .option(\"password\", \"zipcode123\") \\\n",
     "            .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "            .load()\n",
     "\n",
@@ -82,94 +83,124 @@
     "        .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "        .option(\"dbtable\", \"event_log\") \\\n",
     "        .option(\"user\", \"root\") \\\n",
-    "        .option(\"password\", \"mypass\") \\\n",
+    "        .option(\"password\", \"zipcode123\") \\\n",
     "        .load()\n",
     "\n",
     "    # Convert to Pandas DataFrame and select necessary columns\n",
     "    pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\") \\\n",
     "        .orderBy(F.desc(\"event_date\")) \\\n",
-    "        .limit(10) \\\n",
+    "        .limit(6) \\\n",
     "        .toPandas()\n",
+    "    \n",
+    "    # Sort by date in descending order\n",
+    "    pdf = pdf.sort_values('event_date', ascending=False).reset_index(drop=True)\n",
     "\n",
-    "      # Calculate fan_count_change\n",
+    "    # Calculate fan_count_change\n",
     "    pdf['fan_count_change'] = pdf['current_fan_count'].diff().fillna(0).astype(int)\n",
+    "\n",
+    "    # Calculate percent change\n",
+    "    pdf['percent_change'] = (pdf['fan_count_change'] / pdf['current_fan_count'].shift(-1)) * 100\n",
+    "    \n",
+    "    # Detect anomalies (changes >= 15%)\n",
+    "    pdf['is_anomaly'] = np.abs(pdf['percent_change']) >= 15\n",
+    "    \n",
+    "    # Remove the extra row we used for calculation\n",
+    "    pdf = pdf.iloc[:-1]\n",
     "    \n",
     "    # Create the event log HTML using Dash components with specified font sizes\n",
     "    event_log_html = html.Div([\n",
-    "        html.H4(\"Event Log\", style={'fontSize': '20px', 'marginBottom': '10px'}),  # Set font size for the header\n",
+    "        html.H4(\"Event Log\", style={'fontSize': '25px', 'marginBottom': '10px'}),  # Set font size for the header\n",
     "        html.Table([\n",
     "            html.Thead(html.Tr([\n",
-    "                html.Th(\"Date\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Celebrity\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Event\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Change\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'})\n",
+    "                html.Th(\"Date\", style={'fontSize': '21px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Celebrity\", style={'fontSize': '21px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Event\", style={'fontSize': '21px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Change\", style={'fontSize': '21px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"%\", style={'fontSize': '21px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Anomaly\", style={'fontSize': '21px', 'fontWeight': 'bold', 'padding': '5px'})\n",
     "            ])),\n",
     "            html.Tbody([\n",
     "                html.Tr([\n",
-    "                    html.Td(row['event_date'].strftime('%Y-%m-%d'), style={'fontSize': '12px', 'padding': '5px'}),\n",
-    "                    html.Td(row['celebrity'], style={'fontSize': '12px', 'padding': '5px'}),\n",
-    "                    html.Td(row['event_description'], style={'fontSize': '12px', 'padding': '5px'}),\n",
-    "                    html.Td(f\"{row['fan_count_change']:+d}\", style={'fontSize': '12px', 'padding': '5px', 'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'})\n",
+    "                    html.Td(row['event_date'].strftime('%Y-%m-%d'), style={'fontSize': '20px', 'padding': '5px'}),\n",
+    "                    html.Td(row['celebrity'], style={'fontSize': '20px', 'padding': '5px'}),\n",
+    "                    html.Td(row['event_description'], style={'fontSize': '20px', 'padding': '5px'}),\n",
+    "                    html.Td(f\"{row['fan_count_change']:+d}\", style={'fontSize': '20px', 'padding': '5px', 'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'}),\n",
+    "                    html.Td(f\"{row['percent_change']:.2f}%\" if not pd.isna(row['percent_change']) else \"N/A\", style={'fontSize': '20px', 'padding': '5px'}),\n",
+    "                    html.Td(\"ALERT\" if row['is_anomaly'] else \"\", style={'fontSize': '20px', 'padding': '5px', 'color': 'red', 'fontWeight': 'bold'})\n",
     "                ]) for _, row in pdf.iterrows()\n",
     "            ])\n",
     "        ], style={'width': '100%', 'textAlign': 'left', 'borderCollapse': 'collapse'})\n",
-    "    ])\n",
+    "    ]) \n",
     "    \n",
     "    return event_log_html\n",
     "\n",
+    "[\n",
+    "    '#1f77b4',  # muted blue\n",
+    "    '#ff7f0e',  # safety orange\n",
+    "    '#2ca02c',  # cooked asparagus green\n",
+    "    '#d62728',  # brick red\n",
+    "    '#9467bd',  # muted purple\n",
+    "    '#8c564b',  # chestnut brown\n",
+    "    '#e377c2',  # raspberry yogurt pink\n",
+    "    '#7f7f7f',  # middle gray\n",
+    "    '#bcbd22',  # curry yellow-green\n",
+    "    '#17becf'   # blue-teal\n",
+    "]\n",
     "\n",
     "# Initialize Dash app\n",
     "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "\n",
     "# Define custom styles for KPI cards\n",
     "card_styles = [\n",
-    "    {\"backgroundColor\": \"#0075A4\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"},\n",
-    "    {\"backgroundColor\": \"#008FAD\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"},\n",
-    "    {\"backgroundColor\": \"#00A697\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"},\n",
-    "    {\"backgroundColor\": \"#1EB769\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"}\n",
+    "    {\"backgroundColor\": \"#0075A4\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"80px\", \"lineHeight\": \"1\"},\n",
+    "    {\"backgroundColor\": \"#008FAD\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"80px\", \"lineHeight\": \"1\"},\n",
+    "    {\"backgroundColor\": \"#00A697\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"80px\", \"lineHeight\": \"1\"},\n",
+    "    {\"backgroundColor\": \"#1EB769\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"80px\", \"lineHeight\": \"1\"}\n",
     "]\n",
     "\n",
     "# Initialize layout with KPI cards next to each other and graph with legend on top\n",
     "app.layout = html.Div([\n",
-    "     dbc.Row([\n",
-    "        dbc.Col(html.Button('Start', id='start-stop-button', n_clicks=0, className=\"btn btn-primary\"), width=\"auto\"),\n",
-    "        dbc.Col(html.H1(\"StarMeter\", style={\"fontSize\": \"24px\"}), width=True)\n",
+    "    dbc.Row([\n",
+    "        dbc.Col(html.Button('Start', id='start-stop-button', n_clicks=0, className=\"btn btn-primary\"), width=\"400\"),\n",
+    "        dbc.Col(html.H1(\"StarMeter\", style={\"fontSize\": \"35px\"}), width=True)\n",
     "    ], align='center', className=\"mb-4\"),\n",
     "    \n",
     "    dbc.Row([\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Total Fans (in thousands)\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='total-fans', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Total Fans\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='total-fans', className=\"card-text\", style={\"fontSize\": \"24px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[0], className=\"mb-2\"), width=2),\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Most Popular Celebrity\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='most-popular-celebrity', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Most Popular Celebrity\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='most-popular-celebrity', className=\"card-text\", style={\"fontSize\": \"24px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[1], className=\"mb-2\"), width=2),\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Average Fans\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='average-fans', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Average Fans\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='average-fans', className=\"card-text\", style={\"fontSize\": \"24px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[2], className=\"mb-2\"), width=2),\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Total Events\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='total-events', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Total Events\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='total-events', className=\"card-text\", style={\"fontSize\": \"24px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[3], className=\"mb-2\"), width=2),\n",
     "    ], className=\"g-1\"),\n",
-    "    \n",
+    "\n",
+    "    # MAIN CHARTS\n",
     "    dbc.Row([\n",
-    "        dbc.Col(dcc.Graph(id='live-update-graph'), width=8),\n",
-    "        dbc.Col(html.Div(id='event-log', children=\"Event log will be displayed here.\", style={\"height\": \"400px\", \"overflowY\": \"auto\", \"border\": \"1px solid #ddd\", \"padding\": \"10px\"}), width=4)\n",
+    "    # Line chart\n",
+    "        dbc.Col(dcc.Graph(id='live-update-graph'), width=6),\n",
+    "        dbc.Col(html.Div(id='event-log', children=\"Event log will be displayed here.\", style={\"height\": \"400px\", \"width\": \"700px\", \"overflowY\": \"auto\", \"border\": \"1px solid #ddd\", \"padding\": \"5px\"}), width=6)\n",
     "    ]),\n",
-    "    \n",
+    "    # Bar chart\n",
     "    dbc.Row([\n",
-    "        dbc.Col(dcc.Graph(id='bar-chart'), width=12)\n",
+    "        dbc.Col(dcc.Graph(id='bar-chart'), width=6)\n",
     "    ]),\n",
     "    \n",
     "    dcc.Interval(\n",
@@ -191,7 +222,7 @@
     "     Output('most-popular-celebrity', 'children'),\n",
     "     Output('average-fans', 'children'),\n",
     "     Output('total-events', 'children'),\n",
-    "     Output('event-log', 'children')],  # Add this output for the event log\n",
+    "     Output('event-log', 'children')],\n",
     "    Input('interval-component', 'n_intervals')\n",
     ")\n",
     "\n",
@@ -209,6 +240,7 @@
     "        max_fans = 0\n",
     "        total_events = 0\n",
     "        current_fan_counts = []  # To store the latest fan counts for the bar chart\n",
+    "        # KPI colors\n",
     "        colors = ['#0075A4', '#008FAD', '#00A697', '#1EB769']\n",
     "\n",
     "        if not fan_counts_df.empty:\n",
@@ -230,12 +262,14 @@
     "                    max_fans = fan_count\n",
     "                    most_popular_celeb = celebrity\n",
     "\n",
+    "            # Celebrity colors\n",
     "            colors = [\n",
     "                '#1f77b4',  # muted blue\n",
     "                '#9467bd',  # muted purple\n",
     "                '#d62728',  # brick red\n",
     "                '#17becf'   # blue-teal\n",
     "            ]\n",
+    "\n",
     "            \n",
     "            # Create traces for each celebrity in the line chart\n",
     "            line_fig = go.Figure()\n",
@@ -245,36 +279,49 @@
     "                    y=fan_counts,\n",
     "                    mode='lines+markers',\n",
     "                    name=celebrity,\n",
-    "                    marker=dict(size=5, color=colors[idx]),\n",
+    "                    marker=dict(size=5.5, color=colors[idx]),\n",
     "                    line=dict(color=colors[idx]),\n",
-    "                    text=['Event happened here'] * len(fan_counts),\n",
+    "                    text=[f'Fan count: {fc}' for fc in fan_counts], \n",
     "                    hoverinfo='text',\n",
     "                    customdata=list(range(len(fan_counts))),  # Index of the markers\n",
     "                ))\n",
     "\n",
+    "            \n",
     "            # Ensure time_data has enough data points to set range\n",
     "            if len(time_data) > 1:\n",
     "                line_fig.update_layout(\n",
     "                    xaxis=dict(range=[max(time_data) - 100, max(time_data)]),\n",
     "                )\n",
     "\n",
+    "            \n",
+    "            # Create line chart\n",
     "            line_fig.update_layout(\n",
     "                xaxis=dict(\n",
     "                    range=[max(0, max(time_data) - 100), max(time_data)],\n",
     "                    fixedrange=True,  # Prevents zooming/panning from affecting range\n",
     "                    showticklabels=False,  # Hides x-axis labels\n",
     "                ),\n",
-    "                xaxis_title='Time (Days)',\n",
-    "                yaxis_title='Number of Fans (in thousands)',\n",
-    "                margin=dict(l=0, r=0, t=40, b=0),  # Adjust margins to fit the layout\n",
+    "                xaxis_title=dict(\n",
+    "                    text='Time (Days)',\n",
+    "                    font=dict(size=20)  # Set the desired font size for the x-axis title\n",
+    "                ),\n",
+    "                yaxis=dict(\n",
+    "                    title=dict(\n",
+    "                        text='Number of Fans',\n",
+    "                        font=dict(size=20)  # Set the desired font size for the y-axis title\n",
+    "                    ),\n",
+    "                    tickfont=dict(size=16),  # Set the font size for the y-axis tick labels\n",
+    "                ),\n",
+    "                margin=dict(l=0, r=0, t=20, b=0),  # Adjust margins to fit the layout\n",
     "                autosize=False,  # Disable autosize to fix width\n",
-    "                width=900,  # Set the desired width\n",
+    "            \n",
     "                height=400,  # Set the desired height\n",
     "                showlegend=True,\n",
     "                legend=dict(\n",
+    "                    font=dict(size=20),  # Larger font size for legend\n",
     "                    orientation='h',  # Horizontal orientation\n",
     "                    yanchor='bottom',\n",
-    "                    y=1.15,\n",
+    "                    y=1.00, # Position of legend\n",
     "                    xanchor='right',\n",
     "                    x=1\n",
     "                ),\n",
@@ -283,25 +330,28 @@
     "                )\n",
     "            )\n",
     "\n",
-    "\n",
-    "            # Create bar chart for current fan counts\n",
+    "            # Create bar chart\n",
     "            bar_fig = go.Figure(data=[\n",
     "                go.Bar(\n",
     "                    x=list(fan_counts_data.keys()),\n",
     "                    y=current_fan_counts,  # Use the latest counts\n",
     "                    marker_color=colors,  # Match colors with the line graph\n",
-    "                    width=0.4  # Set the bar width; adjust as needed\n",
+    "                    width=0.5  # Set the bar width; adjust as needed\n",
     "                )\n",
     "            ])\n",
     "            # Set the y-axis range to the total current fans\n",
     "            bar_fig.update_layout(\n",
-    "                title='Current Fans per Celebrity',\n",
+    "                title=None,  # Hide the title\n",
+    "                # title=dict(\n",
+    "                #     text='Current Celebrity Fan Count',\n",
+    "                #     font=dict(size=24)  # Set the font size for the title\n",
+    "                # ),\n",
     "                xaxis_title='Celebrity',\n",
     "                yaxis_title='Current Fans',\n",
     "                yaxis=dict(range=[0, (total_fans/2)-1000]),  # Set range based on total fans\n",
-    "                margin=dict(l=40, r=40, t=40, b=80),  # Adjust margins to fit the layout\n",
+    "                margin=dict(l=40, r=40, t=40, b=20),  # Adjust margins to fit the layout\n",
     "                autosize=True,\n",
-    "                width=400,  # Set the desired width\n",
+    "                width=500,  # Set the desired width\n",
     "                height=400,  # Set the desired height\n",
     "                showlegend=False,\n",
     "                modebar=dict(\n",
@@ -352,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
