--- a/StarmeterSparkLogRef1.ipynb
+++ b/StarmeterSparkLogRef1.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x164997b30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import time\n",
@@ -15,27 +37,8 @@
     "from dash import dcc, html, Output, Input, State\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
-    "from dash import dcc, html, Input, Output, State"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'SparkSession' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Initialize SparkSession\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m spark \u001b[38;5;241m=\u001b[39m \u001b[43mSparkSession\u001b[49m\u001b[38;5;241m.\u001b[39mbuilder \\\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;241m.\u001b[39mappName(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarMeter\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;241m.\u001b[39mconfig(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspark.jars\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjars/mysql-connector-java-8.4.0.jar\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;241m.\u001b[39mgetOrCreate()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Function to retrieve fan counts with error handling\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_fan_counts\u001b[39m():\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'SparkSession' is not defined"
-     ]
-    }
-   ],
-   "source": [
+    "from dash import dcc, html, Input, Output, State\n",
+    "\n",
     "# Initialize SparkSession\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"StarMeter\") \\\n",
@@ -68,122 +71,112 @@
     "        print(f\"Error retrieving data: {e}\")\n",
     "        return pd.DataFrame(columns=['current_favorite', 'fan_count'])\n",
     "\n",
-    "def fetch_event_data():\n",
-    "    \"\"\"\n",
-    "    Fetches event data from MySQL, processes it, and calculates fan count changes.\n",
     "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: Processed DataFrame with event details and fan count changes.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # Fetch data from MySQL\n",
-    "        df = spark.read.format(\"jdbc\") \\\n",
-    "            .option(\"url\", \"jdbc:mysql://localhost:3306/starmeter_sim\") \\\n",
-    "            .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
-    "            .option(\"dbtable\", \"event_log\") \\\n",
-    "            .option(\"user\", \"root\") \\\n",
-    "            .option(\"password\", \"zipcode123\") \\\n",
-    "            .load()\n",
     "\n",
-    "        # Convert to Pandas DataFrame and select necessary columns\n",
-    "        pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\") \\\n",
-    "            .orderBy(F.desc(\"event_date\")) \\\n",
-    "            .limit(10) \\\n",
-    "            .toPandas()\n",
+    "def fetch_and_calculate_changes():\n",
+    "    # Fetch data from MySQL\n",
+    "    df = spark.read.format(\"jdbc\") \\\n",
+    "        .option(\"url\", \"jdbc:mysql://localhost:3306/starmeter_sim\") \\\n",
+    "        .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
+    "        .option(\"dbtable\", \"event_log\") \\\n",
+    "        .option(\"user\", \"root\") \\\n",
+    "        .option(\"password\", \"zipcode123\") \\\n",
+    "        .load()\n",
     "\n",
-    "        # Calculate fan_count_change\n",
-    "        pdf['fan_count_change'] = pdf['current_fan_count'].diff().fillna(0).astype(int)\n",
+    "    # Convert to Pandas DataFrame and select necessary columns\n",
+    "    pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\") \\\n",
+    "        .orderBy(F.desc(\"event_date\")) \\\n",
+    "        .limit(10) \\\n",
+    "        .toPandas()\n",
     "\n",
-    "        return pdf\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error fetching event data: {e}\")\n",
-    "        return pd.DataFrame(columns=['event_date', 'celebrity', 'event_description', 'current_fan_count', 'fan_count_change'])\n",
-    "\n",
-    "def create_event_log_html(pdf):\n",
-    "    \"\"\"\n",
-    "    Creates the event log HTML layout using the provided DataFrame.\n",
-    "\n",
-    "    Args:\n",
-    "        pdf (pd.DataFrame): DataFrame containing event data with fan count changes.\n",
-    "\n",
-    "    Returns:\n",
-    "        html.Div: Dash HTML component for displaying the event log.\n",
-    "    \"\"\"\n",
+    "      # Calculate fan_count_change\n",
+    "    pdf['fan_count_change'] = pdf['current_fan_count'].diff().fillna(0).astype(int)\n",
+    "    \n",
     "    # Create the event log HTML using Dash components with specified font sizes\n",
     "    event_log_html = html.Div([\n",
-    "        html.H4(\"Event Log\", style={'fontSize': '30px', 'marginBottom': '10px'}),\n",
+    "        html.H4(\"Event Log\", style={'fontSize': '20px', 'marginBottom': '10px'}),  # Set font size for the header\n",
     "        html.Table([\n",
     "            html.Thead(html.Tr([\n",
-    "                html.Th(\"Date\", style={'fontSize': '22px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Celebrity\", style={'fontSize': '22px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Event\", style={'fontSize': '22px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Change\", style={'fontSize': '22px', 'fontWeight': 'bold', 'padding': '5px'})\n",
+    "                html.Th(\"Date\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Celebrity\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Event\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Change\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'})\n",
     "            ])),\n",
     "            html.Tbody([\n",
     "                html.Tr([\n",
-    "                    html.Td(row['event_date'].strftime('%Y-%m-%d'), style={'fontSize': '22px', 'padding': '5px'}),\n",
-    "                    html.Td(row['celebrity'], style={'fontSize': '22px', 'padding': '5px'}),\n",
-    "                    html.Td(row['event_description'], style={'fontSize': '22px', 'padding': '5px'}),\n",
-    "                    html.Td(f\"{row['fan_count_change']:+d}\", \n",
-    "                            style={'fontSize': '22px', 'padding': '5px', \n",
-    "                                   'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'})\n",
+    "                    html.Td(row['event_date'].strftime('%Y-%m-%d'), style={'fontSize': '12px', 'padding': '5px'}),\n",
+    "                    html.Td(row['celebrity'], style={'fontSize': '12px', 'padding': '5px'}),\n",
+    "                    html.Td(row['event_description'], style={'fontSize': '12px', 'padding': '5px'}),\n",
+    "                    html.Td(f\"{row['fan_count_change']:+d}\", style={'fontSize': '12px', 'padding': '5px', 'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'})\n",
     "                ]) for _, row in pdf.iterrows()\n",
     "            ])\n",
     "        ], style={'width': '100%', 'textAlign': 'left', 'borderCollapse': 'collapse'})\n",
     "    ])\n",
+    "    \n",
     "    return event_log_html\n",
     "\n",
     "\n",
+    "[\n",
+    "    '#1f77b4',  # muted blue\n",
+    "    '#ff7f0e',  # safety orange\n",
+    "    '#2ca02c',  # cooked asparagus green\n",
+    "    '#d62728',  # brick red\n",
+    "    '#9467bd',  # muted purple\n",
+    "    '#8c564b',  # chestnut brown\n",
+    "    '#e377c2',  # raspberry yogurt pink\n",
+    "    '#7f7f7f',  # middle gray\n",
+    "    '#bcbd22',  # curry yellow-green\n",
+    "    '#17becf'   # blue-teal\n",
+    "]\n",
     "\n",
     "# Initialize Dash app\n",
     "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "\n",
     "# Define custom styles for KPI cards\n",
     "card_styles = [\n",
-    "    {\"backgroundColor\": \"#0075A4\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"90px\", \"lineHeight\": \".8\"},\n",
-    "    {\"backgroundColor\": \"#008FAD\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"90px\", \"lineHeight\": \".8\"},\n",
-    "    {\"backgroundColor\": \"#00A697\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"90px\", \"lineHeight\": \".8\"},\n",
-    "    {\"backgroundColor\": \"#1EB769\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"250px\", \"height\": \"90px\", \"lineHeight\": \".8\"}\n",
+    "    {\"backgroundColor\": \"#0075A4\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"},\n",
+    "    {\"backgroundColor\": \"#008FAD\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"},\n",
+    "    {\"backgroundColor\": \"#00A697\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"},\n",
+    "    {\"backgroundColor\": \"#1EB769\", \"color\": \"white\", \"padding\": \"0px\", \"borderRadius\": \"10px\", \"width\": \"200px\", \"height\": \"60px\", \"lineHeight\": \"1\"}\n",
     "]\n",
     "\n",
     "# Initialize layout with KPI cards next to each other and graph with legend on top\n",
     "app.layout = html.Div([\n",
     "     dbc.Row([\n",
     "        dbc.Col(html.Button('Start', id='start-stop-button', n_clicks=0, className=\"btn btn-primary\"), width=\"auto\"),\n",
-    "        dbc.Col(html.H1(\"StarMeter\", style={\"fontSize\": \"42px\"}), width=True)\n",
+    "        dbc.Col(html.H1(\"StarMeter\", style={\"fontSize\": \"24px\"}), width=True)\n",
     "    ], align='center', className=\"mb-4\"),\n",
     "    \n",
     "    dbc.Row([\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Total Fans (thousands)\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='total-fans', className=\"card-text\", style={\"fontSize\": \"26px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Total Fans (in thousands)\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='total-fans', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[0], className=\"mb-2\"), width=2),\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Most Popular Celebrity\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='most-popular-celebrity', className=\"card-text\", style={\"fontSize\": \"26px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Most Popular Celebrity\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='most-popular-celebrity', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[1], className=\"mb-2\"), width=2),\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Average Fans\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='average-fans', className=\"card-text\", style={\"fontSize\": \"26px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Average Fans\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='average-fans', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[2], className=\"mb-2\"), width=2),\n",
     "        dbc.Col(dbc.Card([\n",
     "            dbc.CardBody([\n",
-    "                html.H4(\"Total Events\", className=\"card-title\", style={\"fontSize\": \"20px\", \"margin\": \"0\"}),\n",
-    "                html.H5(id='total-events', className=\"card-text\", style={\"fontSize\": \"26px\", \"margin\": \"0\"})\n",
+    "                html.H4(\"Total Events\", className=\"card-title\", style={\"fontSize\": \"12px\", \"margin\": \"0\"}),\n",
+    "                html.H5(id='total-events', className=\"card-text\", style={\"fontSize\": \"16px\", \"margin\": \"0\"})\n",
     "            ])\n",
     "        ], style=card_styles[3], className=\"mb-2\"), width=2),\n",
     "    ], className=\"g-1\"),\n",
     "    \n",
     "    dbc.Row([\n",
     "        dbc.Col(dcc.Graph(id='live-update-graph'), width=8),\n",
-    "        dbc.Col(html.Div(id='event-log', children=\"Event log will be displayed here.\", style={\"height\": \"400px\", \"width\": \"500px\", \"overflowY\": \"auto\", \"border\": \"1px solid #ddd\", \"padding\": \"10px\"}), width=4)\n",
+    "        dbc.Col(html.Div(id='event-log', children=\"Event log will be displayed here.\", style={\"height\": \"400px\", \"overflowY\": \"auto\", \"border\": \"1px solid #ddd\", \"padding\": \"10px\"}), width=4)\n",
     "    ]),\n",
     "    \n",
     "    dbc.Row([\n",
@@ -212,6 +205,7 @@
     "     Output('event-log', 'children')],  # Add this output for the event log\n",
     "    Input('interval-component', 'n_intervals')\n",
     ")\n",
+    "\n",
     "def update_graph_and_kpis(n):\n",
     "    global time_data, fan_counts_data\n",
     "\n",
@@ -278,22 +272,17 @@
     "            line_fig.update_layout(\n",
     "                xaxis=dict(\n",
     "                    range=[max(0, max(time_data) - 100), max(time_data)],\n",
-    "                    tickfont=dict(size=20),\n",
     "                    fixedrange=True,  # Prevents zooming/panning from affecting range\n",
     "                    showticklabels=False,  # Hides x-axis labels\n",
     "                ),\n",
-    "                xaxis_title=dict(\n",
-    "                    text='Time (Days)',\n",
-    "                    font=dict(size=20)  # Set the desired font size for the x-axis title\n",
-    "                ),\n",
+    "                xaxis_title='Time (Days)',\n",
     "                yaxis_title='Number of Fans (in thousands)',\n",
-    "                margin=dict(l=0, r=0, t=40, b=0), # Adjust margins to fit the layout\n",
+    "                margin=dict(l=0, r=0, t=40, b=0),  # Adjust margins to fit the layout\n",
     "                autosize=False,  # Disable autosize to fix width\n",
-    "                width=800,  # Set the desired width\n",
-    "                height=500,  # Set the desired height\n",
+    "                width=900,  # Set the desired width\n",
+    "                height=400,  # Set the desired height\n",
     "                showlegend=True,\n",
     "                legend=dict(\n",
-    "                    font=dict(size=18),  # Larger font size for legend\n",
     "                    orientation='h',  # Horizontal orientation\n",
     "                    yanchor='bottom',\n",
     "                    y=1.15,\n",
@@ -374,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
